// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SidePanel> render renders 1`] = `
<div
  className="Ddg--DetailsPanel"
  style={
    Object {
      "width": "30vw",
    }
  }
>
  <div
    className="Ddg--DetailsPanel--SvcOpHeader"
  >
    <BreakableText
      className="BreakableText"
      text="test svc"
      wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
    />
  </div>
  <div
    className="Ddg--DetailsPanel--DecorationHeader"
  >
    <span>
      Decorating test svc
    </span>
  </div>
  <span
    className="Ddg--DetailsPanel--errorMsg"
  >
    test decorationValue
  </span>
  <VerticalResizer
    max={0.8}
    min={0.1}
    onChange={[Function]}
    position={0.3}
    rightSide={true}
  />
</div>
`;

exports[`<SidePanel> render renders detailLink 1`] = `
<div
  className="Ddg--DetailsPanel"
  style={
    Object {
      "width": "30vw",
    }
  }
>
  <div
    className="Ddg--DetailsPanel--SvcOpHeader"
  >
    <BreakableText
      className="BreakableText"
      text="test svc"
      wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
    />
  </div>
  <div
    className="Ddg--DetailsPanel--DecorationHeader"
  >
    <span>
      Decorating test svc
    </span>
    <Tooltip
      arrowPointAtCenter={true}
      autoAdjustOverflow={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      placement="top"
      prefixCls="ant-tooltip"
      title="More Info"
      transitionName="zoom-big-fast"
    >
      <a
        className="Ddg--DetailsPanel--DetailLink"
        href="test details link"
        rel="noreferrer noopener"
        target="_blank"
      >
        <NewWindowIcon
          isLarge={false}
        />
      </a>
    </Tooltip>
  </div>
  <span
    className="Ddg--DetailsPanel--errorMsg"
  >
    test decorationValue
  </span>
  <div
    className="Ddg--DetailsPanel--LoadingWrapper"
  >
    <LoadingIndicator
      centered={false}
      className="Ddg--DetailsPanel--LoadingIndicator"
      small={false}
    />
  </div>
  <VerticalResizer
    max={0.8}
    min={0.1}
    onChange={[Function]}
    position={0.3}
    rightSide={true}
  />
</div>
`;

exports[`<SidePanel> render renders details 1`] = `
<div
  className="Ddg--DetailsPanel"
  style={
    Object {
      "width": "30vw",
    }
  }
>
  <div
    className="Ddg--DetailsPanel--SvcOpHeader"
  >
    <BreakableText
      className="BreakableText"
      text="test svc"
      wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
    />
  </div>
  <div
    className="Ddg--DetailsPanel--DecorationHeader"
  >
    <span>
      Decorating test svc
    </span>
  </div>
  <span
    className="Ddg--DetailsPanel--errorMsg"
  >
    test decorationValue
  </span>
  <DetailsCard
    className="Ddg--DetailsPanel--DetailsCard "
    details="details string"
    header="Details"
  />
  <VerticalResizer
    max={0.8}
    min={0.1}
    onChange={[Function]}
    position={0.3}
    rightSide={true}
  />
</div>
`;

exports[`<SidePanel> render renders details error 1`] = `
<div
  className="Ddg--DetailsPanel"
  style={
    Object {
      "width": "30vw",
    }
  }
>
  <div
    className="Ddg--DetailsPanel--SvcOpHeader"
  >
    <BreakableText
      className="BreakableText"
      text="test svc"
      wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
    />
  </div>
  <div
    className="Ddg--DetailsPanel--DecorationHeader"
  >
    <span>
      Decorating test svc
    </span>
  </div>
  <span
    className="Ddg--DetailsPanel--errorMsg"
  >
    test decorationValue
  </span>
  <DetailsCard
    className="Ddg--DetailsPanel--DetailsCard is-error"
    details="details error"
    header="Details"
  />
  <VerticalResizer
    max={0.8}
    min={0.1}
    onChange={[Function]}
    position={0.3}
    rightSide={true}
  />
</div>
`;

exports[`<SidePanel> render renders omitted array of operations 1`] = `
<div
  className="Ddg--DetailsPanel"
  style={
    Object {
      "width": "30vw",
    }
  }
>
  <div
    className="Ddg--DetailsPanel--SvcOpHeader"
  >
    <BreakableText
      className="BreakableText"
      text="test svc"
      wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
    />
  </div>
  <div
    className="Ddg--DetailsPanel--DecorationHeader"
  >
    <span>
      Decorating test svc
    </span>
  </div>
  <span
    className="Ddg--DetailsPanel--errorMsg"
  >
    test decorationValue
  </span>
  <VerticalResizer
    max={0.8}
    min={0.1}
    onChange={[Function]}
    position={0.3}
    rightSide={true}
  />
</div>
`;

exports[`<SidePanel> render renders while loading 1`] = `
<div
  className="Ddg--DetailsPanel"
  style={
    Object {
      "width": "30vw",
    }
  }
>
  <div
    className="Ddg--DetailsPanel--SvcOpHeader"
  >
    <BreakableText
      className="BreakableText"
      text="test svc"
      wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
    />
  </div>
  <div
    className="Ddg--DetailsPanel--DecorationHeader"
  >
    <span>
      Decorating test svc
    </span>
  </div>
  <span
    className="Ddg--DetailsPanel--errorMsg"
  >
    test decorationValue
  </span>
  <div
    className="Ddg--DetailsPanel--LoadingWrapper"
  >
    <LoadingIndicator
      centered={false}
      className="Ddg--DetailsPanel--LoadingIndicator"
      small={false}
    />
  </div>
  <VerticalResizer
    max={0.8}
    min={0.1}
    onChange={[Function]}
    position={0.3}
    rightSide={true}
  />
</div>
`;

exports[`<SidePanel> render renders with operation 1`] = `
<div
  className="Ddg--DetailsPanel"
  style={
    Object {
      "width": "30vw",
    }
  }
>
  <div
    className="Ddg--DetailsPanel--SvcOpHeader"
  >
    <BreakableText
      className="BreakableText"
      text="test svc"
      wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
    />
    <BreakableText
      className="BreakableText"
      text="::test op"
      wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
    />
  </div>
  <div
    className="Ddg--DetailsPanel--DecorationHeader"
  >
    <span>
      Decorating test svc
    </span>
  </div>
  <span
    className="Ddg--DetailsPanel--errorMsg"
  >
    test decorationValue
  </span>
  <VerticalResizer
    max={0.8}
    min={0.1}
    onChange={[Function]}
    position={0.3}
    rightSide={true}
  />
</div>
`;

exports[`<SidePanel> render renders with progressbar 1`] = `
<div
  className="Ddg--DetailsPanel"
  style={
    Object {
      "width": "30vw",
    }
  }
>
  <div
    className="Ddg--DetailsPanel--SvcOpHeader"
  >
    <BreakableText
      className="BreakableText"
      text="test svc"
      wordRegexp={/\\\\W\\*\\\\w\\+\\\\W\\*/g}
    />
  </div>
  <div
    className="Ddg--DetailsPanel--DecorationHeader"
  >
    <span>
      Decorating test svc
    </span>
  </div>
  <div
    className="Ddg--DetailsPanel--PercentCircleWrapper"
  >
    <div>
      stand-in progressbar
    </div>
  </div>
  <VerticalResizer
    max={0.8}
    min={0.1}
    onChange={[Function]}
    position={0.3}
    rightSide={true}
  />
</div>
`;
